Cập nhật giao diện lần 3
Thêm giao diện phần bảng tin và nhiều cái nữa không nhớ :v:

--- a/reactjs/public/manifest.json
+++ b/reactjs/public/manifest.json
@@ -4,12 +4,13 @@
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "16x16",
       "type": "image/x-icon"
     }
   ],
-  "start_url": ".",
+  "start_url": "/posts",
+  "scope": "/",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#2F6BB1",
+  "background_color": "#EDFAF9"
 }
