--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -12,6 +12,7 @@
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
+    "react-ckeditor-component": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
