--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -1,9 +1,10 @@
 {
   "name": "cmd-management",
   "version": "0.1.0",
+  "homepage": "https://adamwilling.github.io/CMD-Management",
   "private": true,
   "dependencies": {
-    "@ckeditor/ckeditor5-build-decoupled-document": "^31.1.0",
+    "@ckeditor/ckeditor5-build-classic": "^32.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -30,11 +31,14 @@
     "web-vitals": "^2.1.2"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "sass": "^1.45.2",
     "sass-loader": "^12.4.0",
     "webpack": "^5.65.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
