--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -13,20 +13,21 @@
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "query-string": "^7.0.1",
+    "rc-time-picker": "^3.7.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
+    "react-calendar": "^3.7.0",
     "react-ckeditor-component": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
     "react-star-ratings": "^2.3.0",
-    "react-timepicker": "^2.0.2",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "sassy-datepicker": "^0.7.0",
     "styled-content-loader": "^1.2.2",
     "web-vitals": "^2.1.2"
   },
