--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -22,7 +22,7 @@
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "react-select": "^5.2.2",
     "react-star-ratings": "^2.3.0",
     "react-transition-group": "^4.4.2",
